--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "host": "next dev -H 192.168.1.5 -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,5 +19,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.1.7",
+    "@types/react": "^18.2.6",
+    "typescript": "^5.0.4"
   }
 }
